# voxbank

./: .env.example  .gitignore  LICENSE  README.md  push_to_github.md  pyproject.toml  repo_structure.txt  setup_git.ps1
.github/workflows/: ci.yml  docker-build.yml  lint.yml
auth-service/: Dockerfile  app.py  requirements.txt  schemas.py
auth-service/biometrics/: matcher.py  voiceprint_model.py
auth-service/otp/: otp_manager.py  sms_provider_mock.py
data/: schema.sql  seed.sql
demo/scripts/: balance_demo.txt  error_demo.txt  transfer_demo.txt
docs/: README.md  summary.txt
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  Login.tsx  Register.tsx  VoiceSearch.tsx  VoiceSearchGeminiBrowser.tsx  index.css
infra/: README.md  docker-compose.yml
infra/k8s/: ingress.yaml  mcp-tools.yaml  mock-bank.yaml  orchestrator.yaml
infra/reverse-proxy/: Dockerfile  nginx.conf
mcp-tools/: README.md  docker-compose.override.example.yml  utils.py
mcp-tools/balance/: Dockerfile  app.py  schemas.py  service.py
mcp-tools/common/: auth.py  utils.py  validators.py
mcp-tools/loan_inquiry/: Dockerfile  app.py  schemas.py  service.py
mcp-tools/reminders/: Dockerfile  app.py  schemas.py  service.py
mcp-tools/src/: app.py  deprecated.py  logging_config.py  mcp_server.py
mcp-tools/transactions/: Dockerfile  app.py  schemas.py  service.py
mcp-tools/transfer/: Dockerfile  app.py  schemas.py  service.py
mock-bank/: Dockerfile  README.md  app.py  schemas.py
mock-bank/src/: app.py  audio_utils.py  logging_config.py  voice_auth.py
orchestrator/: Dockerfile  LOGGING.md  README.md  requirements.txt
orchestrator/src/: __init__.py  agent_helpers.py  app.py  llm_agent.py  (+8 more)
(+72 files in other folders)
