[project]
name = "voxbank-orchestrator"
version = "0.1.0"
description = "Orchestrator service for VoxBank voice banking assistant"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx",
    "google-genai", # Gemini SDK (async)
    "pydantic",
    "pydantic-settings",
    "orjson", # Faster JSON (FastAPI default recommended)
    "aiofiles", # Needed for FastAPI static or file ops
    "fastapi-cli", # Optional – convenient commands
    "psycopg[binary]", # <— Postgres driver
    "alembic",
    "sqlalchemy",
    "psycopg2>=2.9.11",
    "asyncpg>=0.30.0",
    "fastmcp>=2.13.1",
    "speechbrain>=1.0.3",
    "soundfile>=0.13.1",
    "torchaudio==2.8.0",
    "huggingface-hub==0.14.1",
    "webrtcvad>=2.0.10",
    "resemblyzer>=0.1.4",
    "openai>=2.8.1",
]

[tool.uv]
# Recommended UV settings
index-url = "https://pypi.org/simple"
